# ParallelQSlim

./: .gitignore  CMakeLists.txt  README.md
presentation/: beamerthemelmtslides.sty  lmt_presentation.dvi  lmt_presentation.nav  lmt_presentation.snm  lmt_presentation.tex
presentation/figures/: TUMLogo_oZ_Vollfl_blau_CMYK.eps  bg.ai  bg_de.eps  bg_en.eps  title_de.eps  title_en.eps
report/: Abstract.tex  Appendix.tex  Bibliography.bib  Body.tex  Conclusions.tex  Introduction.tex  Kurzfassung.tex  LMT_Thesis.bbl  LMT_Thesis.blg  LMT_Thesis.tex  LMT_Thesis.toc  StatementsDE.tex  StatementsEN.tex  chart.ods  lmtstyle.sty
report/figures/: TUMLogo_oZ_Outline_schwarz_CMYK.eps
simplify_mesh/src/garland/: q_slim.cpp  q_slim.h
simplify_mesh/src/garland/models/: face.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
simplify_mesh/src/garland/models/quadric/: quadric.h
simplify_mesh/src/garland/models/quadric/3x3/: quadric3.cpp
simplify_mesh/src/garland/models/quadric/9x9/: quadric9.h
simplify_mesh/src/parallel/: parallel_simplifier.h
simplify_mesh/src/reader/: fast_ply_reader.h  reader_factory.h
simplify_mesh/src/smooth/: taubin.hpp
simplify_mesh/test/: mesh_utils.h  test_quadric.cpp
src/: main.cpp  nv_garland_decimate.cpp
src/garland/: enums.h  geometry.cpp  geometry.h  types.h
src/garland/models/: edge.cpp  edge.h  face.cpp  mesh.cpp  mesh.h  vertex.cpp
src/garland/models/quadric/: quadric.h
src/garland/models/quadric/3x3/: quadric3.h
src/garland/models/quadric/6x6/: quadric6.cpp  quadric6.h
src/garland/models/quadric/9x9/: quadric9.cpp
src/parallel/: parallel_simplifier.h
src/partition/: aabb.h  cluster.h  partitioner.h
src/partition/basic/: basic_partitioner.h
src/reader/: fast_ply_reader.h  fastply_datalayouts.h  mesh_reader.h  open_mesh_reader.h  reader_factory.h
test/: CMakeLists.txt  mesh.ply  test_mesh_general.cpp
